[package]
name = "gr_ust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.build-override]
opt-level = 3

[dependencies]
autocxx = "0.26.0"
cxx = { version = "1.0.106", features = ["c++17"] }

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!

